faet: 资源预测合并到服务请求菜单下 (merge request !1194)
Squash merge branch 'bcc/test-scr-0705' into 'bcc/feature-scr'

--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -269,6 +269,10 @@
           <span class="icon hcm-icon bkhcm-icon-yuyanqiehuanriwen"></span>
           <p class="icon-text">yuyanqiehuanriwen</p>
         </li>
+        <li class="icon-item" title="ticket">
+          <span class="icon hcm-icon bkhcm-icon-ticket"></span>
+          <p class="icon-text">ticket</p>
+        </li>
         <li class="icon-item" title="not-favorited">
           <span class="icon hcm-icon bkhcm-icon-not-favorited"></span>
           <p class="icon-text">not-favorited</p>
@@ -701,6 +705,12 @@
             <use xlink:href="#bkhcm-icon-yuyanqiehuanriwen"></use>
           </svg>
           <p class="icon-text">yuyanqiehuanriwen</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-ticket"></use>
+          </svg>
+          <p class="icon-text">ticket</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
