feat: 账号管理功能开关配置 (merge request !1266)
Squash merge branch 'feat-bcc/bill-config' into 'bcc/feature-scr'
feat: 账号管理功能开关配置

--story=118694829


TAPD: --story=118694829

--- a/front/index.html
+++ b/front/index.html
@@ -21,6 +21,7 @@
             const BK_CMDB_CREATE_BIZ_DOCS_URL = "{{ .BK_CMDB_CREATE_BIZ_DOCS_URL }}"
             const BK_CMDB_CREATE_BIZ_URL = "{{ .BK_CMDB_CREATE_BIZ_URL }}";
             const ENABLE_CLOUD_SELECTION = "{{ .ENABLE_CLOUD_SELECTION }}";
+            const ENABLE_ACCOUNT_BILL = "{{ .ENABLE_ACCOUNT_BILL }}";
 
             return {
                 BK_HCM_AJAX_URL_PREFIX: BK_HCM_AJAX_URL_PREFIX,
@@ -33,6 +34,7 @@
                 BK_CMDB_CREATE_BIZ_DOCS_URL,
                 BK_CMDB_CREATE_BIZ_URL,
                 ENABLE_CLOUD_SELECTION,
+                ENABLE_ACCOUNT_BILL,
             };
         })();
     </script>
