--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -485,9 +485,9 @@
           <span class="icon hcm-icon bkhcm-icon-res-shelves"></span>
           <p class="icon-text">res-shelves</p>
         </li>
-        <li class="icon-item" title="shengchan">
-          <span class="icon hcm-icon bkhcm-icon-shengchan"></span>
-          <p class="icon-text">shengchan</p>
+        <li class="icon-item" title="cvm-produce">
+          <span class="icon hcm-icon bkhcm-icon-cvm-produce"></span>
+          <p class="icon-text">cvm-produce</p>
         </li>
         <li class="icon-item" title="bill-manage">
           <span class="icon hcm-icon bkhcm-icon-bill-manage"></span>
@@ -1084,9 +1084,9 @@
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
-            <use xlink:href="#bkhcm-icon-shengchan"></use>
+            <use xlink:href="#bkhcm-icon-cvm-produce"></use>
           </svg>
-          <p class="icon-text">shengchan</p>
+          <p class="icon-text">cvm-produce</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
