feat: 自研云-CLB-提供白名单灰度功能 (merge request !1748)
--story=120749569

--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,7 @@
             const ENABLE_CLOUD_SELECTION = "{{ .ENABLE_CLOUD_SELECTION }}";
             const ENABLE_ACCOUNT_BILL = "{{ .ENABLE_ACCOUNT_BILL }}";
             const ENABLE_NOTICE = "{{ .ENABLE_NOTICE }}";
+            const ZIYAN_CLB_BIZ_WHITELIST = "{{ .ZIYAN_CLB_BIZ_WHITELIST }}";
 
             return {
                 BK_HCM_AJAX_URL_PREFIX: BK_HCM_AJAX_URL_PREFIX,
@@ -36,7 +37,8 @@
                 BK_CMDB_CREATE_BIZ_URL,
                 ENABLE_CLOUD_SELECTION,
                 ENABLE_ACCOUNT_BILL,
-                ENABLE_NOTICE
+                ENABLE_NOTICE,
+                ZIYAN_CLB_BIZ_WHITELIST,
             };
         })();
     </script>
