feat: 主机申请需求类型选择交互优化 (merge request !1976)
--story=121536132

--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -517,6 +517,26 @@
           <span class="icon hcm-icon bkhcm-icon-my-apply"></span>
           <p class="icon-text">my-apply</p>
         </li>
+        <li class="icon-item" title="regular">
+          <span class="icon hcm-icon bkhcm-icon-regular"></span>
+          <p class="icon-text">regular</p>
+        </li>
+        <li class="icon-item" title="rolling-server">
+          <span class="icon hcm-icon bkhcm-icon-rolling-server"></span>
+          <p class="icon-text">rolling-server</p>
+        </li>
+        <li class="icon-item" title="lantern">
+          <span class="icon hcm-icon bkhcm-icon-lantern"></span>
+          <p class="icon-text">lantern</p>
+        </li>
+        <li class="icon-item" title="green-channel-rocket">
+          <span class="icon hcm-icon bkhcm-icon-green-channel-rocket"></span>
+          <p class="icon-text">green-channel-rocket</p>
+        </li>
+        <li class="icon-item" title="host-multi">
+          <span class="icon hcm-icon bkhcm-icon-host-multi"></span>
+          <p class="icon-text">host-multi</p>
+        </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
       <ul class="use-describe">
@@ -1133,6 +1153,36 @@
             <use xlink:href="#bkhcm-icon-my-apply"></use>
           </svg>
           <p class="icon-text">my-apply</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-regular"></use>
+          </svg>
+          <p class="icon-text">regular</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-rolling-server"></use>
+          </svg>
+          <p class="icon-text">rolling-server</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-lantern"></use>
+          </svg>
+          <p class="icon-text">lantern</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-green-channel-rocket"></use>
+          </svg>
+          <p class="icon-text">green-channel-rocket</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-host-multi"></use>
+          </svg>
+          <p class="icon-text">host-multi</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
