feat: 资源预测单-在流程节点支持ITSM审批&提示优化 (merge request !1947)
Squash merge branch 'bcc/feat-ticket-audit' into 'bcc/v1.7.x'

* chore: 优化审批人为空的显示# Reviewed, transaction id: 29999
* chore: 补充催单按钮ts&还原webpack启动端口配置# Reviewed, transaction id: 29991
* feat: 审批流优化问题修复# Reviewed, transaction id: 29592
* chore: 催单增加默认弹出# Reviewed, transaction id: 29556
* chore: 审批流样式优化# Reviewed, transaction id: 29547
* feat: 审批流程提示优化
* feat: 资源预测单-在流程节点支持ITSM审批
* refactor: 审批流组件优化

--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -121,6 +121,10 @@
           <span class="icon hcm-icon bkhcm-icon-minus-circle"></span>
           <p class="icon-text">minus-circle</p>
         </li>
+        <li class="icon-item" title="notice">
+          <span class="icon hcm-icon bkhcm-icon-notice"></span>
+          <p class="icon-text">notice</p>
+        </li>
         <li class="icon-item" title="plus-circle">
           <span class="icon hcm-icon bkhcm-icon-plus-circle"></span>
           <p class="icon-text">plus-circle</p>
@@ -445,9 +449,21 @@
           <span class="icon hcm-icon bkhcm-icon-close"></span>
           <p class="icon-text">close</p>
         </li>
+        <li class="icon-item" title="delete">
+          <span class="icon hcm-icon bkhcm-icon-delete"></span>
+          <p class="icon-text">delete</p>
+        </li>
         <li class="icon-item" title="release-note">
           <span class="icon hcm-icon bkhcm-icon-release-note"></span>
           <p class="icon-text">release-note</p>
+        </li>
+        <li class="icon-item" title="user2">
+          <span class="icon hcm-icon bkhcm-icon-user2"></span>
+          <p class="icon-text">user2</p>
+        </li>
+        <li class="icon-item" title="configuration">
+          <span class="icon hcm-icon bkhcm-icon-configuration"></span>
+          <p class="icon-text">configuration</p>
         </li>
         <li class="icon-item" title="jiebang">
           <span class="icon hcm-icon bkhcm-icon-jiebang"></span>
@@ -559,6 +575,12 @@
             <use xlink:href="#bkhcm-icon-minus-circle"></use>
           </svg>
           <p class="icon-text">minus-circle</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-notice"></use>
+          </svg>
+          <p class="icon-text">notice</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
@@ -1048,9 +1070,27 @@
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-delete"></use>
+          </svg>
+          <p class="icon-text">delete</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
             <use xlink:href="#bkhcm-icon-release-note"></use>
           </svg>
           <p class="icon-text">release-note</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-user2"></use>
+          </svg>
+          <p class="icon-text">user2</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-configuration"></use>
+          </svg>
+          <p class="icon-text">configuration</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
