chore: pick外部版内容 (merge request !2297)
--story=124395093

--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -465,6 +465,14 @@
           <span class="icon hcm-icon bkhcm-icon-delete"></span>
           <p class="icon-text">delete</p>
         </li>
+        <li class="icon-item" title="circle-correct-filled">
+          <span class="icon hcm-icon bkhcm-icon-circle-correct-filled"></span>
+          <p class="icon-text">circle-correct-filled</p>
+        </li>
+        <li class="icon-item" title="circle-wrong-filled">
+          <span class="icon hcm-icon bkhcm-icon-circle-wrong-filled"></span>
+          <p class="icon-text">circle-wrong-filled</p>
+        </li>
         <li class="icon-item" title="release-note">
           <span class="icon hcm-icon bkhcm-icon-release-note"></span>
           <p class="icon-text">release-note</p>
@@ -564,6 +572,10 @@
         <li class="icon-item" title="host-multi">
           <span class="icon hcm-icon bkhcm-icon-host-multi"></span>
           <p class="icon-text">host-multi</p>
+        </li>
+        <li class="icon-item" title="other">
+          <span class="icon hcm-icon bkhcm-icon-other"></span>
+          <p class="icon-text">other</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
@@ -1106,6 +1118,18 @@
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-circle-correct-filled"></use>
+          </svg>
+          <p class="icon-text">circle-correct-filled</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-circle-wrong-filled"></use>
+          </svg>
+          <p class="icon-text">circle-wrong-filled</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
             <use xlink:href="#bkhcm-icon-release-note"></use>
           </svg>
           <p class="icon-text">release-note</p>
@@ -1253,6 +1277,12 @@
             <use xlink:href="#bkhcm-icon-host-multi"></use>
           </svg>
           <p class="icon-text">host-multi</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-other"></use>
+          </svg>
+          <p class="icon-text">other</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
