feat: 【短租类型】主机申领-支持“短租项目” --story=127698656 (merge request !2597)
Squash merge branch 'feat-short-rental' into 'bcc/feature-plan-short-rental'
feat: 【短租类型】主机申领-支持“短租项目” --story=127698656

 



TAPD: --story=127698656
TAPD: --story=126784401
TAPD: --story=127700168
TAPD: --story=127699679
TAPD: --story=127698410

--- a/front/src/assets/iconfont/demo.html
+++ b/front/src/assets/iconfont/demo.html
@@ -577,6 +577,10 @@
           <span class="icon hcm-icon bkhcm-icon-other"></span>
           <p class="icon-text">other</p>
         </li>
+        <li class="icon-item" title="short-rental">
+          <span class="icon hcm-icon bkhcm-icon-short-rental"></span>
+          <p class="icon-text">short-rental</p>
+        </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
       <ul class="use-describe">
@@ -1283,6 +1287,12 @@
             <use xlink:href="#bkhcm-icon-other"></use>
           </svg>
           <p class="icon-text">other</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bkhcm-icon-short-rental"></use>
+          </svg>
+          <p class="icon-text">short-rental</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
